decoration shop squelette

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,4 +2,4 @@
 @import "./components/decorations";
 @import "./components/snowman";
 @import "./components/tree";
-@import "./pages/chrismasPage";
+@import "./pages/christmasPage";
