--- a/src/styles/components/_decorations.scss
+++ b/src/styles/components/_decorations.scss
@@ -15,6 +15,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
+    margin-top: 10px;
   }
 
   .decoration {
