--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,8 +1,8 @@
-*{
+*, body, :root{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
