decoration selection and fitlre fonctionnel

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,3 +3,4 @@
 @import "./components/snowman";
 @import "./components/tree";
 @import "./pages/christmasPage";
+@import "./components/decorationCard";
