--- a/src/styles/components/_decorationCard.scss
+++ b/src/styles/components/_decorationCard.scss
@@ -2,10 +2,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: black solid 1px;
+  // border: black solid 1px;
   width: 70%;
   min-height: 15%;
-  backdrop-filter: blur(5px);
 
   img {
     object-fit: contain;
