--- a/src/styles/pages/_christmasPage.scss
+++ b/src/styles/pages/_christmasPage.scss
@@ -8,4 +8,5 @@
   height: 100vh;
   display: flex;
   align-items: center;
+  cursor: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/heart.svg), auto;
 }
