maj snowmen animations

--- a/src/styles/components/_snowman.scss
+++ b/src/styles/components/_snowman.scss
@@ -4,6 +4,10 @@
     width: 100vw;
     height: 100vh;
 
+    .snowMensettings{
+        cursor: pointer;
+    }
+
     .snowBoxer{
         position: absolute;
         height: 15vh;
