--- a/src/styles/pages/_christmasPage.scss
+++ b/src/styles/pages/_christmasPage.scss
@@ -12,6 +12,27 @@
     .tree {
       width: 50%;
     }
+
+    .traineau {
+      width: 50%;
+      position:absolute;
+      animation-name: slideIn;
+      animation-duration: 4s;
+      animation-iteration-count: infinite;
+    }
+    @keyframes slideIn {
+      0% {
+        transform: translate(-200px, 0px);
+      }
+      50% {
+        transform: translate(0px, 200px);
+      }
+      100% {
+        transform: translate(2000px, 40px);
+      }
+
+    }
+    
 }
 
 
