--- a/src/styles/components/_decorations.scss
+++ b/src/styles/components/_decorations.scss
@@ -1,29 +1,46 @@
-.decorations {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 30%;
-  height: 80%;
-  margin-left: 40px;
-  flex-direction: column;
-  border: solid black 1px;
+  .decorations{
 
-  .decorationsImage {
-    overflow-y: scroll;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
+    width: 90%;
     height: 100%;
-    flex-direction: column;
-  }
 
-  .Filter {
-    display: flex;
-    width: 80%;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
-    margin-top: 10px;
-  }
+    .shop {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 30%;
+      height: 95%;
+      margin-left: 40px;
+      flex-direction: column;
+      border: solid black 1px;
+    
+      .decorationsImage {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+      }
+    
+      .Filter {
+        display: flex;
+        width: 80%;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 10px;
+        margin-top: 10px;
+      }
+    }
+    
+    .sapin{
+      width: 70%;
+
+      img{
+        width: 100%;
+      }
+      
+    }
 }
+  
+
