--- a/src/styles/components/_decorationCard.scss
+++ b/src/styles/components/_decorationCard.scss
@@ -1,13 +1,15 @@
 .decorationCard {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   // border: black solid 1px;
-  width: 70%;
-  min-height: 15%;
+  width: 32%;
+  height: 9%;
+
+  
 
   img {
-    object-fit: contain;
-    height: 100%;
+    width: 32%;
   }
 }
