--- a/src/styles/components/_snowman.scss
+++ b/src/styles/components/_snowman.scss
@@ -1,60 +1,76 @@
-.snowMan{
-    z-index: 1;
-    position: relative;
-    width: 100vw;
-    height: 100vh;
+.snowMan {
+  z-index: 1000;
+  position: relative;
+  width: 100%;
+  height: 100%;
 
-    .snowMensettings{
-        cursor: pointer;
+  .snowBoxer {
+    position: absolute;
+    height: 15vh;
+    bottom: 38vh;
+    right: 15vw;
+  }
+
+  .snowHide {
+    position: absolute;
+    height: 10vh;
+    top: 26vh;
+    left: 22.5vw;
+  }
+
+  .snowHide2 {
+    position: absolute;
+    height: 10vh;
+    left: 6.5vw;
+    top: 42vh;
+  }
+
+  .snowSurfer {
+    position: absolute;
+    height: 25vh;
+    top: 43vh;
+    left: 12vw;
+  }
+
+  .snowFather {
+    position: absolute;
+    right: 5vw;
+    bottom: 10vh;
+    height: 40vh;
+  }
+
+  .snowManHi {
+    position: absolute;
+    height: 15vh;
+    top: 27vh;
+    right: 22vw;
+  }
+
+  .snowManHi2 {
+    position: absolute;
+    height: 30vh;
+    bottom: 4vh;
+    left: 22vw;
+  }
+
+  .snowBall {
+    position: absolute;
+    height: 15vh;
+    // bottom: 10vh;
+    // left: 20vw;
+    // animation-name: moveSnowBall;
+    // animation-duration: 3s; 
+    // animation-timing-function: ease; 
+    // animation-iteration-count: infinite;
+
+
+  }
+  @keyframes moveSnowBall {
+    0% {
+      transform: translate(0, 0);
     }
-
-    .snowBoxer{
-        position: absolute;
-        height: 15vh;
-        bottom: 40vh;
-        right:15vw;
+    100% {
+      transform: translate(var(--targetLeft), var(--targetTop))
     }
-
-    .snowHide{
-        position: absolute;
-        height: 10vh;
-        top: 27vh;
-        left: 21.5vw;
-    }
-
-    .snowHide2{
-        position: absolute;
-        height: 10vh;
-        left: 5vw;
-        top: 41vh;
-    }
-
-    .snowSurfer{
-        position: absolute;
-        height: 25vh;
-        top: 40vh;
-        left: 10vw;
-    }
-
-
-    .snowFather{
-        position: absolute;
-        right: 5vw;
-        bottom: 10vh;
-        height: 40vh;
-    }
-
-    .snowManHi{
-        position: absolute;
-        height: 15vh;
-        top: 25vh;
-        right: 22vw;
-    }
-
-    .snowManHi2{
-        position: absolute;
-        height: 30vh;
-        bottom: 4vh;
-        left: 20vw;
-    }
+  }
 }
