--- a/src/styles/components/_decorations.scss
+++ b/src/styles/components/_decorations.scss
@@ -1,5 +1,4 @@
 .decorations {
-
   display: flex;
   width: 100%;
   height: 100%;
@@ -27,9 +26,15 @@
       height: 100%;
       flex-wrap: wrap;
       backdrop-filter: blur(5px);
-      border: rgb(187 11 11) solid 3px;
+      border-image: url("./images/guirlandeNoel.png");
+      border-image-width: 100px;
+      border-image-outset:80px;
+      border-image-slice: 700; 
+      border-image-repeat:round;
+      border-style: solid;
+      // border-width: 20px;
+      // border: rgb(187 11 11) solid 3px;
       border-radius: 10px;
-
     }
   }
 
