--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,3 +4,4 @@
 @import "./pages/christmasPage";
 @import "./components/decorationCard";
 @import "./components/snowEffect";
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap');
