--- a/src/styles/pages/_christmasPage.scss
+++ b/src/styles/pages/_christmasPage.scss
@@ -13,18 +13,28 @@
 
   position: relative;
 
-  .capture {
+  .captureButton {
     position: absolute;
-    left: 50%;
+    left: 15%;
     bottom: 1%;
+    z-index: 205;
+  }
+
+  .message {
     z-index: 300;
+    position: absolute;
+    width: 30%;
+    height: 95%;
+    margin-left: 5%;
+    border-radius: 10px;
+    font-family: Pixelify Sans;
   }
 }
 
 .traineau {
   width: 50%;
   position:absolute;
-  z-index: 195;
+  z-index: 1;
   animation-name: slideIn;
   animation-duration: 30s;
   animation-iteration-count: infinite;
