ajout 2ème lutin

--- a/src/styles/components/_decorations.scss
+++ b/src/styles/components/_decorations.scss
@@ -32,7 +32,7 @@
       border-image-outset:80px;
       border-image-slice: 700; 
       border-image-repeat:round;
-      border-style: solid;
+      border-style: none;
       // border-width: 20px;
       // border: rgb(187 11 11) solid 3px;
       border-radius: 10px;
