--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,12 +1,12 @@
-*, body, :root{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    // width: 100%;
-    // height: 100vh;
+*,
+body,
+:root {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-:root{
-    --targetLeft: 0;
-    --targetTop:0;
+:root {
+  --targetLeft: 0;
+  --targetTop: 0;
 }
