--- a/src/styles/pages/_christmasPage.scss
+++ b/src/styles/pages/_christmasPage.scss
@@ -10,7 +10,8 @@
   display: flex;
   align-items: center;
 
-  cursor: url("https://www.pngmart.com/files/11/Christmas-Candy-Cane-PNG-HD.png"), auto;
+  cursor: url("https://www.pngmart.com/files/11/Christmas-Candy-Cane-PNG-HD.png"),
+    auto;
 
   position: relative;
 
@@ -19,19 +20,18 @@
     left: 8%;
     bottom: 2%;
     z-index: 205;
-    
-      min-width: 100px;
-      padding: 5px 10px;
-      text-decoration: none;
-      color: #fff;
-      background: rgb(187 11 11);
-      outline: none;
-      border-radius: 15px;
-      font-size: 2rem;
-      width: 300px;
-      font-family: Dancing Script;
-      cursor: pointer;
-    
+
+    min-width: 100px;
+    padding: 5px 10px;
+    text-decoration: none;
+    color: #fff;
+    background: rgb(187 11 11);
+    outline: none;
+    border-radius: 15px;
+    font-size: 2rem;
+    width: 300px;
+    font-family: Dancing Script;
+    cursor: pointer;
 
     button::before {
       content: "";
@@ -52,19 +52,18 @@
     left: 45%;
     bottom: 2%;
     z-index: 205;
-    
-      min-width: 100px;
-      padding: 5px 10px;
-      text-decoration: none;
-      color: #fff;
-      background: rgb(187 11 11);
-      outline: none;
-      border-radius: 15px;
-      font-size: 2rem;
-      width: 300px;
-      font-family: Dancing Script;
-      cursor: pointer;
-    
+
+    min-width: 100px;
+    padding: 5px 10px;
+    text-decoration: none;
+    color: #fff;
+    background: rgb(187 11 11);
+    outline: none;
+    border-radius: 15px;
+    font-size: 2rem;
+    width: 300px;
+    font-family: Dancing Script;
+    cursor: pointer;
 
     button::before {
       content: "";
@@ -84,8 +83,8 @@
   .message {
     z-index: 300;
     position: absolute;
-     left: 2.8vw;
-     top: 2.8vh;
+    left: 2.8vw;
+    top: 2.8vh;
     width: 31%;
     height: 97%;
     // margin-top: 2%;
@@ -93,32 +92,27 @@
     border-radius: 10px;
     font-family: Dancing Script;
     font-size: 6rem;
-    color: #FFD700;
+    color: #ffd700;
     padding: 5vh 1vw 5vh 1vw;
 
-    &::placeholder{
-      color: #FFD700;
+    &::placeholder {
+      color: #ffd700;
     }
 
-    input{
+    input {
       padding: 2%;
-
     }
 
-    
     // ::-webkit-input-placeholder {
     //   text-align: center;
     //   align-self: center;
     // }
-    
-  
   }
-
 }
 
 .traineau {
   width: 50%;
-  position:absolute;
+  position: absolute;
   z-index: 1;
   animation-name: slideIn;
   animation-duration: 20s;
@@ -129,17 +123,15 @@
     transform: translate(-2000px, 0px);
   }
   10% {
-    transform: translate(0px, 200px) ;
+    transform: translate(0px, 200px);
   }
- 50% {
-     transform: translate(10000px, 40px) scale(0.1);
-   }
+  50% {
+    transform: translate(10000px, 40px) scale(0.1);
+  }
   // 21%{
   //   transform: translate(20000px, 40px);
   // }
   100% {
-    transform: translate(20000px, 40px) ;
+    transform: translate(20000px, 40px);
   }
-
 }
-
