--- a/src/styles/components/_snowman.scss
+++ b/src/styles/components/_snowman.scss
@@ -99,11 +99,21 @@
     animation-name: apparition;
     height: 35vh;
   }
+  .lea {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    animation-duration: 1s;
+    animation-timing-function: ease;
+    animation-name: apparition;
+    height: 40vh;
+  }
 
   .lucas {
     position: absolute;
     bottom: 0;
     left: 0;
+    height: 35vh;
     animation-duration: 1s;
     animation-timing-function: ease;
     animation-name: apparition;
